# 3DSMC_BA

./: .gitignore  CMakeLists.txt  README.md  ba_types.hpp  bf_preprocessor.hpp  bundle_adjustment.cpp  bundle_adjustment_old.cpp  dataloader_bal.hpp  dataloader_bf.hpp  frame-000001.pose.txt  main.cpp  mesh_utils.hpp  solver_ceres.hpp
src/: sfm.hpp
src/util/: command_parser.hpp  comparison_graph.hpp  comparison_pair.hpp  logging.hpp  matrix_utils.hpp  point_appearance.hpp  sorting.hpp
